[gd_scene load_steps=8 format=3 uid="uid://bnqlnpxb47hb"]

[ext_resource type="Script" uid="uid://tbhaklp2dvwo" path="res://objects/common/target_marker.gd" id="1_ybepw"]
[ext_resource type="Texture2D" uid="uid://yohk3urt0e0a" path="res://textures/marker_a.png" id="2_auwka"]
[ext_resource type="Texture2D" uid="uid://dx33u8vdllssr" path="res://textures/marker_v.png" id="3_ylqi5"]
[ext_resource type="Texture2D" uid="uid://cff6sjyic4j1s" path="res://textures/lock_sprite.png" id="4_ylqi5"]

[sub_resource type="ViewportTexture" id="ViewportTexture_ylqi5"]
viewport_path = NodePath("MeshInstance3D/SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vh6uo"]
resource_local_to_scene = true
transparency = 1
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_ylqi5")
texture_filter = 0
billboard_mode = 1
fixed_size = true

[sub_resource type="QuadMesh" id="QuadMesh_om7tv"]
size = Vector2(0.64, 0.32)

[node name="TargetMarker" type="Node3D"]
script = ExtResource("1_ybepw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.294185, -1.1461)
material_override = SubResource("StandardMaterial3D_vh6uo")
mesh = SubResource("QuadMesh_om7tv")
skeleton = NodePath("../..")

[node name="SubViewport" type="SubViewport" parent="MeshInstance3D"]
transparent_bg = true
size = Vector2i(256, 128)

[node name="Control" type="Control" parent="MeshInstance3D/SubViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="NameLabel" type="Label" parent="MeshInstance3D/SubViewport/Control"]
unique_name_in_owner = true
modulate = Color(0.486275, 0.988235, 0, 1)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -600.0
offset_top = -106.0
offset_right = 600.0
offset_bottom = -83.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 2

[node name="TagLabel" type="Label" parent="MeshInstance3D/SubViewport/Control"]
unique_name_in_owner = true
modulate = Color(0.486275, 0.988235, 0, 1)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -550.0
offset_top = -11.5
offset_right = -152.0
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
horizontal_alignment = 2
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MeshInstance3D/SubViewport/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="TargetH" type="TextureRect" parent="MeshInstance3D/SubViewport/Control/CenterContainer"]
unique_name_in_owner = true
modulate = Color(0.486275, 0.988235, 0, 1)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource("2_auwka")

[node name="TargetR" type="TextureRect" parent="MeshInstance3D/SubViewport/Control/CenterContainer"]
unique_name_in_owner = true
modulate = Color(0.486275, 0.988235, 0, 1)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource("3_ylqi5")

[node name="Lock" type="TextureRect" parent="MeshInstance3D/SubViewport/Control/CenterContainer"]
unique_name_in_owner = true
modulate = Color(1, 0.270588, 0, 1)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource("4_ylqi5")

[node name="DataLabel" type="Label" parent="MeshInstance3D/SubViewport/Control"]
unique_name_in_owner = true
modulate = Color(0.486275, 0.988235, 0, 1)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 150.0
offset_top = -11.5
offset_right = 185.0
offset_bottom = 11.5
grow_vertical = 2
size_flags_horizontal = 2
vertical_alignment = 1
